# cmake-template

./: .gitignore  CMakeLists.txt
exe/: CMakeLists.txt
exe/src/: main.c
lib/: CMakeLists.txt
lib/src/: bool.h  file.c  file.h
